--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ enableGitInfo = false
   organizations = [ { name = "University of Mostar", url = "http://www.sum.ba/" }, { name = "Faculty of Civil Engineering", url = "http://gf.sum.ba/" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "CV3_2017.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
   email = "anton.vrdoljak@gf.sum.ba"
