--- a/config.toml
+++ b/config.toml
@@ -209,7 +209,7 @@ enableGitInfo = false
   # Configuration of talk pages.
   [params.talks]
     # Show talk time?
-    time = true
+    time = false
 
   # Configuration of publication pages.
   [params.publications]
@@ -220,7 +220,7 @@ enableGitInfo = false
   # Configuration of project pages.
   [params.projects]
     # List publications and talks related to the project?
-    list_children = false
+    list_children = true
 
     # Post list format.
     #   0 = Simple
