--- a/config.toml
+++ b/config.toml
@@ -68,6 +68,7 @@ enableGitInfo = false
   office_hours = """
   Tuesday 15:00 to 16:00\\
   Thursday 17:30 to 18:30\\
+  """
   Otherwise email to book an appointment
   """
   phone = "+387 36 355 033"
@@ -265,15 +266,20 @@ enableGitInfo = false
     icon_pack = "fas"
     link = "#contact"  # For a direct email link, use "mailto:test@example.org".
 
-  [[params.social]]
-    icon = "twitter"
-    icon_pack = "fab"
-    link = "https://twitter.com/"
+  # [[params.social]]
+  #   icon = "twitter"
+  #   icon_pack = "fab"
+  #   link = "https://twitter.com/"
 
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
     link = "https://scholar.google.com/citations?user=-WuiWI0AAAAJ&hl=en"
+    
+  [[params.social]]
+    icon = "researchgate"
+    icon_pack = "ai"
+    link = "https://www.researchgate.net/profile/Anton_Vrdoljak2"
 
   [[params.social]]
     icon = "github"
