--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,8 @@ enableGitInfo = false
   Tuesday 15:00 to 16:00\\
   Thursday 17:30 to 18:30\\
   \\
-  Otherwise email to book an appointment
+  Otherwise email to book an appointment.
+  \\
   """
   phone = "+387 36 355 033"
   skype = ""
