--- a/config.toml
+++ b/config.toml
@@ -351,6 +351,10 @@ enableGitInfo = false
   tag = "tags"
   category = "categories"
   publication_type = "publication_types"
+  
+# Hard linebreaks
+[blackfriday]
+  extensions = ["hardLineBreak"]
 
 # Languages
 #   Create a [languages.X] block for each language you want, where X is the language ID.
