--- a/config.toml
+++ b/config.toml
@@ -100,9 +100,9 @@ enableGitInfo = false
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
   map = 1
-  map_api_key = ""
-  latitude = "43.346691"
-  longitude = "17.796846"
+  map_api_key = "AIzaSyBtwl48LQbrdx0oB0tS1Yo8ZKqjMVW5c24"
+  latitude = "43.346642"
+  longitude = "17.7963118"
   zoom = 15
 
   # SITE SETUP
