--- a/config.toml
+++ b/config.toml
@@ -320,9 +320,14 @@ enableGitInfo = false
   weight = 3
 
 [[menu.main]]
+  name = "MathWorld"
+  url = "#math_world"
+  weight = 4
+
+[[menu.main]]
   name = "Contact"
   url = "#contact"
-  weight = 4
+  weight = 5
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
