--- a/config.toml
+++ b/config.toml
@@ -277,7 +277,12 @@ enableGitInfo = false
     icon = "google-scholar"
     icon_pack = "ai"
     link = "https://scholar.google.com/citations?user=-WuiWI0AAAAJ&hl=en"
-    
+  
+  [[params.social]]
+    icon = "orcid"
+    icon_pack = "ai"
+    link = "http://orcid.org/0000-0002-0559-0981"
+  
   [[params.social]]
     icon = "linkedin-in"
     icon_pack = "fab"
