--- a/config.toml
+++ b/config.toml
@@ -289,12 +289,6 @@ enableGitInfo = false
     icon_pack = "fab"
     link = "https://www.linkedin.com/in/anton-vrdoljak/"
     
-  #[[params.social]]
-  #  icon = "academia"
-  #  icon_pack = "ai"
-  # link = "https://gfmo.academia.edu/AntonVrdoljak"
-  #  title = "Anton Vrdoljak on Academia.edu"
-    
   [[params.social]]
     icon = "researchgate"
     icon_pack = "ai"
@@ -305,6 +299,18 @@ enableGitInfo = false
     icon = "github"
     icon_pack = "fab"
     link = "https://github.com/Vrda-GF"
+  
+  [[params.social]]
+    icon = "academia"
+    icon_pack = "ai"
+    link = "https://gfmo.academia.edu/AntonVrdoljak"
+    title = "Anton Vrdoljak on Academia.edu"
+  
+  [[params.social]]
+    icon = "fab fa-facebook"
+    icon_pack = "fab"
+    link = "https://www.facebook.com/anton.vrdoljak/"
+    title = "Anton Vrdoljak on Facebook"
 
   # Link to a PDF of your resume/CV from the About widget.
   # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
