--- a/config.toml
+++ b/config.toml
@@ -287,7 +287,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "academia"
     icon_pack = "ai"
-    link = "https://gfmo.academia.edu/AntonVrdoljak"
+    link = "https://independent.academia.edu/VrdoljakAnton"
     title = "Anton Vrdoljak on Academia.edu"
     
   [[params.social]]
