--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ enableGitInfo = false
   avatar = "CV3_2017.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
-  email = "anton.vrdoljak@gf.sum.ba"
+  email = "xjvpjgaa"
   address = "Matice hrvatske b.b., Mostar, 88000, B&H"
   office_hours = """
   Tuesday 11:00 to 12:00\\
