--- a/config.toml
+++ b/config.toml
@@ -57,7 +57,7 @@ enableGitInfo = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "University of Mostar", url = "http://www.sum.ba/" }, { name = "Faculty of Civil Engineering", url = "http://fgag.sum.ba/" } ]
+  organizations = [ { name = "University of Mostar", url = "http://www.sum.ba/" }, { name = "Faculty of Civil Engineering,\\Architecture and Geodesy", url = "http://fgag.sum.ba/" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "CV3_2017.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
