--- a/config.toml
+++ b/config.toml
@@ -206,7 +206,8 @@ enableGitInfo = false
     'Report',  # 4
     'Book',  # 5
     'Book section',  # 6
-    'Master thesis (Master of science)'  # 7
+    'Master thesis (Master of science)',  # 7
+    'Doctoral dissertation'  # 8
   ]
 
   # Configuration of talk pages.
